--- a/portfolie.css
+++ b/portfolie.css
@@ -1,9 +1,28 @@
-#mainTextBox {
+@media only screen and (max-width: 600px){
+
+#Velkommen{
+  background: rgb(0, 0, 0);
+    border-radius: 25px;
+    padding: 30px;
+    margin: 20px;
+    text-align: center;
+    opacity: 70%;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+#tekstbox {
     background: rgb(0, 0, 0);
     border-radius: 25px;
     padding: 30px;
     margin: 20px;
-    opacity: 75%;
+    opacity: 70%;
     color: white;
     font-family: 'Courier New', Courier, monospace;
   }
+#body{
+  background-color: gray;
+  background-image: url('images/bark.jfif');
+  background-size: cover ;
+}
+}
